--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
         "bootstrap": "^5.3.8",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "laravel-echo": "^2.2.7",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
         "primeicons": "^7.0.0",
         "primevue": "^4.5.4",
+        "pusher-js": "^8.4.0",
         "reka-ui": "^2.6.1",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
